fromMigrate flag never set for deletes in oplog

XMLWordPrintableJSON

    • Minor Change
    • ALL
    • Sharding E (01/08/16)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When observing deletes was consolidated inside of mongo/db/catalog/collection.cpp, propagation of the fromMigrate flag was lost. This may affect third party tools that monitor the oplog to observe changes in replica sets, and expect the fromMigrate flag to be set in order to indicate operations that are logically internal to the sharded cluster.

            Assignee:
            Dianna Hohensee (Inactive)
            Reporter:
            Andy Schwerin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: