SERVER-21678 setting fromMigrate flag for deletes in oplog