src/mongo/db/cloner.cpp
@@ -605,7 +605,7 @@ Status Cloner::copyDb(OperationContext* txn,
                 // dupsAllowed in IndexCatalog::_unindexRecord and SERVER-17487.
                 for (set<RecordId>::const_iterator it = dups.begin(); it != dups.end(); ++it) {
                     WriteUnitOfWork wunit(txn);
-                    c->deleteDocument(txn, *it, true, true);
+                    c->deleteDocument(txn, *it, false, true, true);
                     wunit.commit();
                 }
 
