src/mongo/db/op_observer.h
@@ -68,10 +68,19 @@ public:
                    bool fromMigrate = false);
     void onUpdate(OperationContext* txn, oplogUpdateEntryArgs args);
     DeleteState aboutToDelete(OperationContext* txn, const NamespaceString& ns, const BSONObj& doc);
+    /**
+     * Handles logging before document is deleted.
+     *
+     * "ns" name of the collection from which deleteState.idDoc will be deleted.
+     * "deleteState" holds information about the deleted document.
+     * "fromMigrate" indicates whether the delete was induced by a chunk migration, and
+     * so should be ignored by the user as an internal maintenance operation and not a
+     * real delete.
+     */
     void onDelete(OperationContext* txn,
                   const NamespaceString& ns,
                   DeleteState deleteState,
-                  bool fromMigrate = false);
+                  bool fromMigrate);
     void onOpMessage(OperationContext* txn, const BSONObj& msgObj);
     void onCreateCollection(OperationContext* txn,
                             const NamespaceString& collectionName,
